syntax = "proto3";


import "google/protobuf/timestamp.proto";

option go_package = "github.com/vedantkulkarni/mqchat/internal/app/proto";




message User{
    string id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp last_seen = 5;
};

message CreateUserRequest{
    string username = 1;
    string email = 2;
}
message CreateUserResponse{
    User user = 1;
}

message UpdateUserRequest{
    string id = 1;
    string username = 2;
    string email = 3;
}
message UpdateUserResponse{
    User user = 1;
}

message DeleteUserRequest{
    string id = 1;
}
message DeleteUserResponse{
    bool message = 1;
}

message GetUserRequest{
    string id = 1;
}
message GetUserResponse{
    User user = 1;
}

service UserGRPCService{
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){}
    rpc GetUser(GetUserRequest) returns (GetUserResponse){}
};